main.css
/*mobile first approach*/
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 30px 0;
}

.hero-container {
    width: 100%;
    max-width: 430px;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.hero-img1, .hero-img2 {
    width: 300px;
}

.video-gallery {
    width: 100%;
    max-width: 430px;
    margin-top: 10px;
    text-align: center;
}

.memory-video {
    width: 100%;
    height: auto;
    margin-top: 10px;
    cursor: pointer;
    background: black;
} 

.video-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

.gallery-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    margin: 20px 0 40px 0;
}

.img-gallery {
    width: 100%;
    max-width: 430px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.img-gallery h2 {
    text-align: center;
}


/*tablet*/
@media (min-width: 768px) {
    .hero-container {
      max-width: 680px;
      flex-direction: row;
      justify-content: space-evenly;
    }

    .img-gallery {
      max-width: 680px;
    }

    .video-gallery {
      max-width: 680px;
    }

		.video-grid {
			display: grid;
      grid-template-columns: repeat(2, auto);
			gap: 20px;
		}

    .gallery-grid {
      grid-template-columns: repeat(3, auto);
    }
}

/*desktop*/
@media (min-width: 1024px) {
    .hero-container {
      max-width: 1100px;
    }

    .video-gallery {
      max-width: 1100px;
    }

    .video-grid {
      grid-template-columns: repeat(3, auto);
		}

    .img-gallery {
      max-width: 1100px;
    }
}

